--- a/src/main/resources/templates/tasks.html
+++ b/src/main/resources/templates/tasks.html
@@ -10,10 +10,26 @@
     <title>EpicTask</title>
 </head>
 
-
 <body>
     
     <h1>EpicTask</h1>
+
+    <div class="card card-border bg-base-300 w-96">
+        <div class="badge badge-success m-4">50 pontos</div>
+
+        <div class="card-body items-center">
+          <h2 class="card-title">Criar o Banco de Dados</h2>
+          <p>Criar o banco de dados com 3 tabelas no mysql</p>
+          <div
+          class="radial-progress bg-primary text-primary-content border-primary border-4"
+        style="--value:70;" aria-valuenow="70" role="progressbar">
+        70%
+        </div>
+    </div>
+    <div class="card-actions justify-end m-4">
+      <button class="btn btn-soft btn-error">Apagar</button>
+    </div>
+      </div>
 
     <h2>Lista de tarefas</h2>
     <ul>
