--- a/src/main/resources/templates/tasks.html
+++ b/src/main/resources/templates/tasks.html
@@ -14,6 +14,8 @@
     
     <h1>EpicTask</h1>
 
+    <main class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4 place-items-center">     
+
     <div class="card card-border bg-base-300 w-96">
         <div class="badge badge-success m-4">50 pontos</div>
 
@@ -30,6 +32,41 @@
       <button class="btn btn-soft btn-error">Apagar</button>
     </div>
       </div>
+
+    <div class="card card-border bg-base-300 w-96">
+        <div class="badge badge-success m-4">50 pontos</div>
+
+        <div class="card-body items-center">
+          <h2 class="card-title">Criar o Banco de Dados</h2>
+          <p>Criar o banco de dados com 3 tabelas no mysql</p>
+          <div
+          class="radial-progress bg-primary text-primary-content border-primary border-4"
+        style="--value:70;" aria-valuenow="70" role="progressbar">
+        70%
+        </div>
+    </div>
+    <div class="card-actions justify-end m-4">
+      <button class="btn btn-soft btn-error">Apagar</button>
+    </div>
+      </div>
+
+    <div class="card card-border bg-base-300 w-96">
+        <div class="badge badge-success m-4">50 pontos</div>
+
+        <div class="card-body items-center">
+          <h2 class="card-title">Criar o Banco de Dados</h2>
+          <p>Criar o banco de dados com 3 tabelas no mysql</p>
+          <div
+          class="radial-progress bg-primary text-primary-content border-primary border-4"
+        style="--value:70;" aria-valuenow="70" role="progressbar">
+        70%
+        </div>
+    </div>
+    <div class="card-actions justify-end m-4">
+      <button class="btn btn-soft btn-error">Apagar</button>
+    </div>
+      </div>
+</main>
 
     <h2>Lista de tarefas</h2>
     <ul>
