--- a/src/main/resources/templates/tasks.html
+++ b/src/main/resources/templates/tasks.html
@@ -12,7 +12,9 @@
 
 <body>
     
-    <h1>EpicTask</h1>
+    <div class="navbar bg-base-100 shadow-sm mb-4">
+        <a class="btn btn-ghost text-xl">EpicTask</a>
+      </div>
 
     <main class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4 place-items-center">     
 
